# ML-Observability-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
dashboard/: app.py
grafana/dashboards/: grafana-dashboard.json  ml_observability.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
infrastructure/alertmanager/: alertmanager.yml
infrastructure/grafana/provisioning/dashboards/: dashboard.yml
infrastructure/grafana/provisioning/datasources/: datasource.yml
infrastructure/kubernetes/: 00-namespace.yaml  01-api-deployment.yaml  02-monitoring.yaml  03-tracing.yaml  04-ingress.yaml  kustomization.yaml
infrastructure/otel-collector/: otel-collector-config.yml
infrastructure/postgres/: init.sql
infrastructure/prometheus/: alert_rules.yml  prometheus.yml
prometheus/: alerts.yml  prometheus.yml
scripts/: demo.py  generate_data.py  setup.sh  simulate_traffic.py  train_models.py
src/api/: __init__.py  app.py  schemas.py
src/api/routes/: __init__.py  explainability.py  health.py  metrics.py  monitoring.py  predictions.py
src/data/: __init__.py  drift_injector.py  schemas.py  synthetic_generator.py
src/explainability/: __init__.py  shap_explainer.py
src/models/: __init__.py  base.py  churn_predictor.py  fraud_detector.py  preprocessing.py  price_predictor.py
src/monitoring/: __init__.py  alerts.py  drift_detector.py  metrics.py
src/tracing/: __init__.py  middleware.py  tracer.py
src/utils/: config.py  logging.py
src/workflows/: __init__.py  monitoring.py  retraining.py  tasks.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_api.py  test_data_generator.py  test_models.py  test_monitoring.py
