[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-observability-platform"
version = "0.1.0"
description = "Production-grade ML monitoring system with drift detection, explainability, and observability"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ashutosh", email = "your-email@example.com"}
]
keywords = [
    "mlops",
    "machine-learning",
    "monitoring",
    "observability",
    "drift-detection",
    "explainability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core ML
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",

    # ML Monitoring
    "evidently>=0.4.0",

    # Explainability
    "lime>=0.2.0",

    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "alembic>=1.13.0",

    # MLflow
    "mlflow>=2.10.0",

    # Observability
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-requests>=0.43b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.43b0",

    # Orchestration
    "prefect>=2.14.0",

    # Data Validation
    "great-expectations",

    # Dashboard
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
    "altair>=5.2.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "loguru>=0.7.2",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

all = [
    "ml-observability-platform[dev,notebooks]",
]

[project.scripts]
mlobs = "src.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/ml-observability-platform"
Documentation = "https://github.com/yourusername/ml-observability-platform#readme"
Repository = "https://github.com/yourusername/ml-observability-platform"
Issues = "https://github.com/yourusername/ml-observability-platform/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "venv", "migrations"]
known_first_party = ["src", "dashboard"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "migrations",
    "venv",
    ".venv",
]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B311"]
